--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
                                             <label for="pine-tree">Сосна</label>
                                         </li>
                                         <li>
-                                            <input class="calculation-form__material-radio calculation-form__material-larch" class="calculation-form__radio" type="radio" id="larch-tree" name="tree-type" value="larch-tree"/>
+                                            <input class="calculation-form__material-radio calculation-form__material-larch" type="radio" id="larch-tree" name="tree-type" value="larch-tree"/>
                                             <label for="larch-tree">Лиственница</label>
                                         </li>
                                         <li>
